// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSourceWizardReducer should handle all defined error types: rejected types ADD_SOURCE 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": true,
    "errorMessage": "",
    "errorStatus": 0,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "ADD_SOURCE_REJECTED",
}
`;

exports[`AddSourceWizardReducer should handle all defined error types: rejected types UPDATE_SOURCE 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": true,
    "errorMessage": "",
    "errorStatus": 0,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "UPDATE_SOURCE_REJECTED",
}
`;

exports[`AddSourceWizardReducer should handle all defined fulfilled types: fulfilled types ADD_SOURCE 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": true,
    "pending": false,
    "show": false,
    "source": {
      "test": "success",
    },
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "ADD_SOURCE_FULFILLED",
}
`;

exports[`AddSourceWizardReducer should handle all defined fulfilled types: fulfilled types UPDATE_SOURCE 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": true,
    "pending": false,
    "show": false,
    "source": {
      "test": "success",
    },
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "UPDATE_SOURCE_FULFILLED",
}
`;

exports[`AddSourceWizardReducer should handle specific defined types: defined type CREATE_SOURCE_SHOW 1`] = `
{
  "result": {
    "add": true,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "CREATE_SOURCE_SHOW",
}
`;

exports[`AddSourceWizardReducer should handle specific defined types: defined type EDIT_SOURCE_SHOW 1`] = `
{
  "result": {
    "add": false,
    "edit": true,
    "editSource": {},
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "EDIT_SOURCE_SHOW",
}
`;

exports[`AddSourceWizardReducer should handle specific defined types: defined type INVALID_SOURCE_WIZARD_STEPTWO 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "INVALID_SOURCE_WIZARD_STEPTWO",
}
`;

exports[`AddSourceWizardReducer should handle specific defined types: defined type UPDATE_SOURCE_HIDE 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "UPDATE_SOURCE_HIDE",
}
`;

exports[`AddSourceWizardReducer should handle specific defined types: defined type VALID_SOURCE_WIZARD_STEPONE 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": false,
  },
  "type": "VALID_SOURCE_WIZARD_STEPONE",
}
`;

exports[`AddSourceWizardReducer should handle specific defined types: defined type VALID_SOURCE_WIZARD_STEPTWO 1`] = `
{
  "result": {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": {},
    "stepOneValid": true,
    "stepTwoErrorMessages": {},
    "stepTwoValid": true,
  },
  "type": "VALID_SOURCE_WIZARD_STEPTWO",
}
`;
